--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Amsterdam';
-  src: url('fonts/Amsterdam Deco One.ttf') format('truetype');
+  src: url('/fonts/Amsterdam Deco One.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
