--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,8 +11,8 @@
     margin: 0;
     overflow: hidden;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.25);
-    position: relative; 
-    z-index: 10; 
+    position: relative;
+
 }
 
 .nav {
@@ -50,8 +50,6 @@
     transition: color 0.3s ease;
 }
 
-
-
 .nav a:visited,
 .nav a:active,
 .nav a:focus {
@@ -63,6 +61,9 @@
 }
 
 @media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+    }
     .nav a {
         font-size: 20px;
     }
