--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,42 +1,32 @@
-@font-face {
-    font-family: 'Amsterdam';
-    src: url('/fonts/Amsterdam Deco One.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
 .header {
     background-color: rgb(29, 29, 29);
-    padding: 10px 5vw;
     margin: 0;
     overflow: hidden;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.25);
     position: relative;
-
+    padding-block: 5px;
 }
 
-.nav {
+.nav-menu {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    width: 100%;
 }
 
-.nav-left,
-.nav-right {
-    display: flex;
-    gap: 2vw;
-    flex-wrap: wrap;
-    padding-inline: 2vw;
+.nav-menu__item {
+    margin-inline: 1vw;
 }
 
-.nav-logo img{
+.logo {
+
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.logo img {
     width: 80px;
     height: 80px;
-    flex-shrink: 0;
-    flex-wrap: wrap;
-    max-width: 100%;
-    height: auto;
 }
 
 .nav a {
@@ -57,10 +47,25 @@
     color: rgb(197, 127, 85);
 }
 
-@media (max-width: 768px) {
-    .header {
-        flex-direction: column;
+@media (max-width: 1200px) {
+    .nav-menu {
+        display: flex;
+        justify-content: space-between;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
     }
+
+    .nav-menu__item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 100px;
+        scroll-snap-align: start;
+    }
+}
+
+@media (max-width: 768px) {
+
     .nav a {
         font-size: 20px;
     }
